src/objects/RateCurrencyBean__mdt.object
<CustomObject>
    <fields>
        <fullName>ActiveDate__c</fullName>
        <label>ActiveDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigTagId__c</fullName>
        <label>ConfigTagId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyCode__c</fullName>
        <label>CurrencyCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyType__c</fullName>
        <label>CurrencyType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayValue__c</fullName>
        <label>DisplayValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormatCode__c</fullName>
        <label>FormatCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImpliedDecimal__c</fullName>
        <label>ImpliedDecimal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InactiveDate__c</fullName>
        <label>InactiveDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsConversionDefault__c</fullName>
        <label>IsConversionDefault</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <label>IsDefault</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsInternal__c</fullName>
        <label>IsInternal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSymbolFirst__c</fullName>
        <label>IsSymbolFirst</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageCode__c</fullName>
        <label>LanguageCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoundingFactor__c</fullName>
        <label>RoundingFactor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoundingMethod__c</fullName>
        <label>RoundingMethod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortDisplay__c</fullName>
        <label>ShortDisplay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RateCurrencyBean</label>
    <pluralLabel>RateCurrencyBean</pluralLabel>
</CustomObject>